Shows the ball on the hockey board

--- a/Ice_Hockey.ipynb
+++ b/Ice_Hockey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +26,30 @@
     "        self.breadth = breadth\n",
     "        self.color = color\n",
     "    \n",
+    "    def boardCharacteristics(self):\n",
+    "        print('Length of the board : ', self.length)\n",
+    "        print('Breadth of the board : ',self.breadth)\n",
+    "        print('Color of the board : ', self.color)\n",
+    "        \n",
     "    def showBoard(self):\n",
     "        img = np.ones((self.breadth,self.length,3))\n",
     "        img[:] = self.color\n",
     "        cv2.imshow('Hockey Board',img)\n",
+    "        cv2.waitKey(0)\n",
+    "        cv2.destroyAllWindows()\n",
+    "        \n",
+    "    def showBallonBoard(self,x,y,r,col):\n",
+    "        img = np.ones((self.breadth,self.length,3))\n",
+    "        img[:] = self.color\n",
+    "        cv2.circle(img, (x,y), r, col, thickness=-1, lineType=8, shift=0)\n",
+    "        cv2.imshow('Hockey Board with ball',img)\n",
     "        cv2.waitKey(0)\n",
     "        cv2.destroyAllWindows() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,46 +58,86 @@
     "'''\n",
     "class Ball:\n",
     "    \n",
-    "    def __init__(self,x,y,radius,color):\n",
+    "    def __init__(self,x,y,radius,color,length,breadth,board_color):\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "        self.radius = radius\n",
     "        self.color  = color\n",
+    "        self.length = length\n",
+    "        self.breadth = breadth\n",
+    "        self.board_color = board_color\n",
     "        \n",
     "    def ballCharacteristics(self):\n",
-    "        print(self.x)\n",
-    "        print(self.y)\n",
-    "        print(self.radius)\n",
-    "        print(self.color)\n",
+    "        print('Ball x pos : ', self.x)\n",
+    "        print('Ball y pos : ',self.y)\n",
+    "        print('Ball radius : ', self.radius)\n",
+    "        print('Ball color : ', self.color)\n",
     "        \n",
     "    def bounceBall(self):\n",
-    "        pass\n",
-    "        "
+    "        hockey_board = Hockey_Board(length, breadth, board_color)\n",
+    "        hockey_board.showBallonBoard(self.x,self.y,self.radius,self.color)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 3\n",
-    "y = 4\n",
-    "radius = 1\n",
-    "color = (0,0,255)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Ball characteristics\n",
+    "x = 300\n",
+    "y = 40\n",
+    "radius = 10\n",
+    "color = (0,0,255)\n",
+    "\n",
+    "# Board characteristics\n",
     "length = 960\n",
     "breadth = 480\n",
-    "board_color = (0,255,100)\n",
+    "board_color = (0,255,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the board :  960\n",
+      "Breadth of the board :  480\n",
+      "Color of the board :  (0, 255, 100)\n"
+     ]
+    }
+   ],
+   "source": [
     "hockey_board = Hockey_Board(length, breadth, board_color)\n",
-    "hockey_board.showBoard()"
+    "hockey_board.boardCharacteristics()\n",
+    "# hockey_board.showBoard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ball x pos :  300\n",
+      "Ball y pos :  40\n",
+      "Ball radius :  10\n",
+      "Ball color :  (0, 0, 255)\n",
+      "Notice the ball on board\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = Ball(x,y,radius,color,length, breadth, board_color)\n",
+    "b.ballCharacteristics()\n",
+    "b.bounceBall()"
    ]
   },
   {
@@ -92,10 +145,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "b = Ball(x,y,radius,color)\n",
-    "b.ballCharacteristics()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
