--- a/Ice_Hockey.ipynb
+++ b/Ice_Hockey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,18 @@
     "        for d_h in range(y,breadth):\n",
     "            orig_img = img.copy()\n",
     "            cv2.circle(orig_img, (x,d_h), r, col, thickness=-1, lineType=8, shift=0)\n",
+    "            cv2.putText(orig_img,\"Going Down\", (x+20,y), cv2.FONT_HERSHEY_SIMPLEX, 0.5, 255)\n",
     "            cv2.imshow('Hockey Board with ball',orig_img)\n",
-    "#             cv2.imwrite('Images/'+str(d_h)+'_down.jpg',orig_img)\n",
+    "            if cv2.waitKey(20) & 0xFF == ord('q'):\n",
+    "                break\n",
     "        print('Going back up')\n",
     "        for u_h in range(breadth,y,-1):\n",
     "            orig_img = img.copy()\n",
     "            cv2.circle(orig_img, (x,u_h), r, col, thickness=-1, lineType=8, shift=0)\n",
+    "            cv2.putText(orig_img,\"Going Up\", (x+20,y), cv2.FONT_HERSHEY_SIMPLEX, 0.5, 255)\n",
     "            cv2.imshow('Hockey Board with ball',orig_img)\n",
-    "#             cv2.imwrite('Images/'+str(u_h)+'_up.jpg',orig_img)\n",
+    "            if cv2.waitKey(20) & 0xFF == ord('q'):\n",
+    "                break\n",
     "        print('Up and down complete')"
    ]
   },
@@ -85,10 +89,10 @@
     "        print('Ball color : ', self.color)\n",
     "        \n",
     "    def bounceBall(self):\n",
-    "        while True:\n",
+    "        while (1):\n",
     "            hockey_board = Hockey_Board(length, breadth, board_color)\n",
     "            hockey_board.showBallonBoard(self.x,self.y,self.radius,self.color)\n",
-    "            if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "            if cv2.waitKey(20) & 0xFF == ord('w'):\n",
     "                break\n",
     "        cv2.destroyAllWindows()"
    ]
@@ -100,14 +104,16 @@
    "outputs": [],
    "source": [
     "# Ball characteristics\n",
-    "x = 300\n",
+    "x = 30\n",
     "y = 40\n",
     "radius = 10\n",
     "color = (0,0,255)\n",
     "\n",
     "# Board characteristics\n",
-    "length = 960\n",
-    "breadth = 480\n",
+    "# length = 960\n",
+    "length = 480\n",
+    "# breadth = 480\n",
+    "breadth = 240\n",
     "board_color = (0,255,100)"
    ]
   },
@@ -120,8 +126,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of the board :  960\n",
-      "Breadth of the board :  480\n",
+      "Length of the board :  480\n",
+      "Breadth of the board :  240\n",
       "Color of the board :  (0, 255, 100)\n"
      ]
     }
@@ -141,27 +147,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ball x pos :  300\n",
+      "Ball x pos :  30\n",
       "Ball y pos :  40\n",
       "Ball radius :  10\n",
       "Ball color :  (0, 0, 255)\n",
       "Going Down\n",
       "Going back up\n",
       "Up and down complete\n",
-      "Going Down\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-48d00c7d35ef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcolor\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlength\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbreadth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mboard_color\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mballCharacteristics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbounceBall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-3-d629636d62b3>\u001b[0m in \u001b[0;36mbounceBall\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m             \u001b[0mhockey_board\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHockey_Board\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlength\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbreadth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mboard_color\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m             \u001b[0mhockey_board\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshowBallonBoard\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolor\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwaitKey\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;36m0xFF\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'q'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-2-e01bfae0789a>\u001b[0m in \u001b[0;36mshowBallonBoard\u001b[1;34m(self, x, y, r, col)\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Going Down'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0md_h\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mbreadth\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m             \u001b[0morig_img\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m             \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcircle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0morig_img\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md_h\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthickness\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlineType\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshift\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;31m#             cv2.imshow('Hockey Board with ball',orig_img)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Going Down\n",
+      "Going back up\n",
+      "Up and down complete\n"
      ]
     }
    ],
@@ -184,6 +179,31 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bouncing ball\n",
+    "\n",
+    "\n",
+    "# img = np.ones((breadth,length,3))\n",
+    "# img[:] = board_color\n",
+    "# orig_img = img.copy()\n",
+    "# count = 0\n",
+    "# while (1):\n",
+    "#     for d_h in range(y,breadth):\n",
+    "#         orig_img = img.copy()\n",
+    "#         cv2.circle(orig_img, (x,d_h), radius, color, thickness=-1, lineType=8, shift=0)\n",
+    "#         cv2.putText(orig_img,\"Hello World!!!\"+ str(d_h), (x+20,y), cv2.FONT_HERSHEY_SIMPLEX, 0.8, 255)\n",
+    "#         cv2.imshow('Hockey Board with ball',orig_img)\n",
+    "#         count+=1\n",
+    "#         if cv2.waitKey(20) & 0xFF == ord('q'):\n",
+    "#                 break\n",
+    "# cv2.destroyAllWindows()"
+   ]
   },
   {
    "cell_type": "code",
