--- a/Ice_Hockey.ipynb
+++ b/Ice_Hockey.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
-    "import time"
+    "import time\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +59,16 @@
     "            cv2.imshow('Hockey Board with ball',orig_img)\n",
     "            if cv2.waitKey(20) & 0xFF == ord('q'):\n",
     "                break\n",
-    "        \n",
+    "                \n",
+    "    @staticmethod\n",
+    "    def calculateAngleIncidence(x1,x2,y1,y2):\n",
+    "        angle = math.degrees(y2-y1/x2-x1)\n",
+    "        print('Angle of Incidence : ', angle )\n",
+    "#         return angle\n",
+    "    \n",
     "    def throwBallAround(self,x,y,r,col):\n",
+    "        prev_x = x\n",
+    "        prev_y = y\n",
     "        for offset in range(500):\n",
     "                new_x = x + offset\n",
     "                new_y = y + offset\n",
@@ -68,13 +77,14 @@
     "                orig_img = img.copy()\n",
     "                cv2.circle(orig_img, (new_x,new_y), r, col, thickness=-1, lineType=8, shift=0)\n",
     "                cv2.imshow('Hockey Board with Ball Thrown',orig_img)\n",
+    "                calculateAngleIncidence(prev_x,new_x,prev_y,new_y)\n",
     "                if cv2.waitKey(20) & 0xFF == ord('q'):\n",
     "                    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -151,13 +161,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nTo bounce a ball on board\\n'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "'''\n",
+    "To bounce a ball on board\n",
+    "'''\n",
     "# ball = Ball(x,y,radius,color,length, breadth, board_color)\n",
     "# ball.ballCharacteristics()\n",
-    "# ball.bounceBall()\n",
+    "# ball.bounceBall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'calculateAngleIncidence' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-46-5a7c54d9c55c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m '''\n\u001b[0;32m      4\u001b[0m \u001b[0mball\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcolor\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlength\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbreadth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mboard_color\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mball\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mthrowBall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdestroyAllWindows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-42-7ae84191e7f5>\u001b[0m in \u001b[0;36mthrowBall\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mthrowBall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0mhockey_board\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHockey_Board\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlength\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbreadth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mboard_color\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m         \u001b[0mhockey_board\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mthrowBallAround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolor\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m         \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdestroyAllWindows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-41-bc37b07af444>\u001b[0m in \u001b[0;36mthrowBallAround\u001b[1;34m(self, x, y, r, col)\u001b[0m\n\u001b[0;32m     58\u001b[0m                 \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcircle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0morig_img\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnew_x\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnew_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthickness\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlineType\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshift\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m                 \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Hockey Board with Ball Thrown'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0morig_img\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 60\u001b[1;33m                 \u001b[0mcalculateAngleIncidence\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprev_x\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnew_x\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mprev_y\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnew_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     61\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwaitKey\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;36m0xFF\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'q'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m                     \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'calculateAngleIncidence' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "To throw a ball in angles\n",
+    "'''\n",
     "ball = Ball(x,y,radius,color,length, breadth, board_color)\n",
     "ball.throwBall()\n",
     "cv2.destroyAllWindows()"
@@ -176,31 +225,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Bouncing ball\n",
-    "\n",
-    "\n",
-    "# img = np.ones((breadth,length,3))\n",
-    "# img[:] = board_color\n",
-    "# orig_img = img.copy()\n",
-    "# count = 0\n",
-    "# while (1):\n",
-    "#     for d_h in range(y,breadth):\n",
-    "#         orig_img = img.copy()\n",
-    "#         cv2.circle(orig_img, (x,d_h), radius, color, thickness=-1, lineType=8, shift=0)\n",
-    "#         cv2.putText(orig_img,\"Hello World!!!\"+ str(d_h), (x+20,y), cv2.FONT_HERSHEY_SIMPLEX, 0.8, 255)\n",
-    "#         cv2.imshow('Hockey Board with ball',orig_img)\n",
-    "#         count+=1\n",
-    "#         if cv2.waitKey(20) & 0xFF == ord('q'):\n",
-    "#                 break\n",
-    "# cv2.destroyAllWindows()"
-   ]
   },
   {
    "cell_type": "code",
