bounces in angle from both ends

--- a/Ice_Hockey.ipynb
+++ b/Ice_Hockey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,14 @@
     "        prev_x = x\n",
     "        prev_y = y\n",
     "        while prev_y!= (self.breadth) or prev_x!= (self.length):\n",
-    "                if prev_y == self.breadth - 2:\n",
-    "                    print('Offset reset done')\n",
-    "                    self.offset = -1\n",
+    "                if prev_y == self.breadth - 2 or prev_y == 2:\n",
+    "                    print('Reached y limit')\n",
+    "                    self.offset = -(self.offset)\n",
+    "                    prev_x = new_x\n",
+    "                    prev_y = new_y\n",
+    "                if prev_x == self.length - 2 or prev_x == 2:\n",
+    "                    print('Reached x limit')\n",
+    "                    self.offset = -(self.offset)\n",
     "                    prev_x = new_x\n",
     "                    prev_y = new_y\n",
     "                new_x = prev_x + self.offset\n",
@@ -94,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +185,7 @@
        "'\\nTo bounce a ball on board\\n'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,17 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Offset reset done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "To throw a ball in angles\n",
